Return rating counts with resource
Count up the ratings for each type for the given resource and return
them inline
